--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,13 +1,13 @@
 {
-    "short_name": "PWA",
-    "name": "PWA sample app",
+    "short_name": "PCalc",
+    "name": "Paper Calculator",
     "display": "standalone",
     "start_url": "index.html",
     "icons": [
         {
-            "src": "images/icon.jpg",
+            "src": "images/icon.png",
             "sizes": "192x192",
-            "type": "image/jpg"
+            "type": "image/png"
         }
     ]
 }
