--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -5,9 +5,9 @@
     "start_url": "index.html",
     "icons": [
         {
-            "src": "images/icon.png",
+            "src": "images/icon.jpg",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/jpg"
         }
     ]
 }
