--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -5,9 +5,9 @@
     "start_url": "index.html",
     "icons": [
 		{
-			"src": "images/android-chrome-192x192.png",
+			"src": "images/icon.jpg",
 			"sizes": "192x192",
-			"type": "image/png"
+			"type": "image/jpg"
 		}
     ]
 }
