--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,13 +1,11 @@
 {
-    "short_name": "PCalc",
-    "name": "Paper Calculator",
+    "short_name": "CPC",
+    "name": "Cost Performance Calculator",
     "display": "standalone",
     "start_url": "index.html",
-    "icons": [
-		{
-			"src": "images/android-chrome-192x192.png",
-			"sizes": "192x192",
-			"type": "image/png"
-		}
-    ]
+    "icons": [{
+        "src": "images/android-chrome-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+    }]
 }
